Bug 145089 - FILEOPEN DOCX Table change tracking insert blank row DOCX export wrong
Summary: FILEOPEN DOCX Table change tracking insert blank row DOCX export wrong
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords: filter:docx
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2021-10-12 09:24 UTC by NISZ LibreOffice Team
Modified: 2021-12-21 08:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word with a table (12.27 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-10-12 09:25 UTC, NISZ LibreOffice Team
Details
Example file saved by Writer (9.35 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-10-12 09:25 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-10-12 09:24:32 UTC
Description:
After inserting a blank row with track changes and reject all changes the last row is still appear

Steps to Reproduce:
1.Open emptyrows.docx
2.Save as emptyrows2.docx and open again
3.Reject all changes

Actual Results:
The last inserted row is not deleted

Expected Results:
In Word, a pale blue color in Show Changes mode indicates that the last blank line is the in emptyrows.docx is still deleted, but not in emptyrows2.docx


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c2de581d1943df2d84f2b71817b6a8bee41f0217
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-10-12 09:25:28 UTC
Created attachment 175685 [details]
Example file from Word with a table
Comment 2 NISZ LibreOffice Team 2021-10-12 09:25:48 UTC
Created attachment 175686 [details]
Example file saved by Writer
Comment 3 Dieter 2021-10-28 07:13:34 UTC
The basic problem I can see is, that both attachments have a table with four rows in Writer and three tables in Word. So for me that's the underlying problem and a bug.

Tested with Word 2016 and

Version: 7.2.2.2 (x64) / LibreOffice Community
Build ID: 02b2acce88a210515b4a5bb2e46cbfb63fe97d56
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 4 Commit Notification 2021-11-09 19:16:13 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2fe0881906462cbcbe8baf81068010310fb1c97a

tdf#145089 DOCX export: fix track changes of table row insertion

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Dieter 2021-11-16 07:14:43 UTC
VERIFIED with

Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 7b8f630db30ee0066a9f4b6e540368d2fcad7fa8
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Last row has been deleteted als rejecting all changes.